# deadenylationkinetics

./: .gitignore  README.md  pyproject.toml  setup.cfg
src/: CNOT7_CAPRIN1_data_for_fit.csv
src/analysis/: error_analysis.py  experiment.py  main.py  minimization.py  models.py  plotting.py  utils.py
src/data/: just_plot_data.py  time_arrays.csv
src/data/230921_CNOT7_CNO7X_CAPRIN1/: CNOT7X_CAPRIN1_data_for_fit.csv  CNOT7X_CAPRIN1_optimal_fit_params.csv  CNOT7X_data_for_fit_sorted.xlsx  CNOT7X_optimal_fit_params.csv  CNOT7_CAPRIN1_optimal_fit_params.csv  CNOT7_data_for_fit_original.csv  CNOT7_optimal_fit_params.csv  fit_parameters_CNOT7.yaml  fit_parameters_CNOT7X.yaml  fit_parameters_CNOT7X_CAPRIN1.yaml  fit_parameters_CNOT7_CAPRIN1.yaml
src/data/230921_CNOT7_CNO7X_CAPRIN1/CNOT7/: CNOT7_MonteCarlo_errors_250_iterations.csv  CNOT7_data_for_fit.csv  CNOT7_data_for_fit_sorted_clean.csv  CNOT7_optimal_fit_params.csv  CNOT7_optimal_fit_params_sorted_clean.csv  fit_parameters_CNOT7.yaml
src/data/230921_CNOT7_CNO7X_CAPRIN1/CNOT7X/: CNOT7X_data_for_fit.csv  CNOT7X_data_for_fit_sorted.csv  CNOT7X_optimal_fit_params.csv  CNOT7X_optimal_fit_params_sorted-data.csv  fit_parameters_CNOT7X.yaml
src/data/230921_CNOT7_CNO7X_CAPRIN1/CNOT7X_CAPRIN1/: CNOT7X-CAPRIN1_MonteCarlo_errors_250_iterations.csv  CNOT7X_CAPRIN1_optimal_fit_params.csv  all_data.afdesign  fit_parameters_CNOT7X_CAPRIN1.yaml
src/data/CNOT7X/: CNOT7X_0-1-2-3-4-10uM_data_for_fit.csv  CNOT7X_100nMRNA_FRET_data_to_fit.csv  fit_parameters_CNOT7X.yaml
src/data/CNOT7_CNO7X_CAPRIN1/: parameter_summary.xlsx
src/data/CNOT8X/: fit_parameters_CNOT8X-wCAP1.yaml  fit_parameters_CNOT8X.yaml  fit_parameters_CNOT8X_100nMRNA.yaml
src/data/CNOT8_CNOT8X_CAPRIN1/: 231207_CNOT8X_wwoCAPRIN1_raw_data.csv
src/data/RNA_DNA_duplex_hybridization/: RNA_DNA_hybrid_duplex_Kd.csv  RNA_DNA_hybrid_duplex_dG.csv
src/data/RNA_for_NMR/: fit_parameters_mock.yaml  mock_data_for_fit.csv
src/scripts/: calculate_hybrid_duplex_free_energy.py  just_plot_data.py  parse_and_plot_raw_data.py  parse_data.py  plot_data.py
(+125 files in other folders)
