[metadata]
name = deadenylationkinetics
version = 0.0.1
author = Robert Harkness, Rosie Irwin
author_email = r.harkness@utoronto.ca
description = A python package for exploring the enzymatic mechanisms of poly(A) RNA deadenylases
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/robharkness/deadenylationkinetics
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True
