[metadata]
name = deadenylationkinetics
version = 0.0.3
author = Robert Harkness, Rosie Irwin
author_email = r.harkness@utoronto.ca
description = A python package for exploring the enzymatic mechanisms of poly(A) RNA deadenylases
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/robharkness/deadenylationkinetics
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
install_requires =
numpy >= 1.17.3
scipy >= 1.7.3 
pandas >= 1.3.3
matplotlib >= 3.5.3
tqdm >= 4.62.3
PyYAML >= 5.2
packages = find:
python_requires = >=3.7
include_package_data = True
